[gd_scene load_steps=5 format=2]

[ext_resource path="res://Comtraption/SpikeBlock/block.png" type="Texture" id=1]
[ext_resource path="res://Comtraption/SpikeBlock/SpikeBlock.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.375, 3.5 )

[node name="SpikeBlock" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )
hframes = 2

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="HitArea" type="Area2D" parent="."]
position = Vector2( 0, -18 )
collision_layer = 0
collision_mask = 16

[node name="Collision" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, 5 )
shape = SubResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
